--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3
 development:
   adapter: sqlite3
-  database: db/development.sqlite3
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
 
